fix spacing

--- a/src/assets/css/datelocation.css
+++ b/src/assets/css/datelocation.css
@@ -6,10 +6,11 @@
 }
 
 h1 {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 2.5rem;
+    color: rgba(0, 0, 0, 0.7);
     padding: 0;
     margin: 0;
-    font-size: 2.5rem;
-    font-family: 'Abril Fatface', cursive;
 }
 
 .date-time {
