--- a/src/assets/css/weather.css
+++ b/src/assets/css/weather.css
@@ -1,8 +1,5 @@
 .weather-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 0;
+    padding: 0.5rem 0 2rem 0;
 }
 
 .weather-img {
